Update JavaIteratorEx.java